# libPointCloud

./: CMakeLists.txt  README.md
config/: README.MD  setupDriverOnLinux.sh
config/ubuntu/: 60-SonyCDK.rules
doc/: ConfigurationFilesDescription.md  DepthH3Introduction.md  EnvironmentalConfiguration.md  FAC.md  FilterUsage.md  README.md  UserGuide-Python.md  UserGuide-cPlus.md
examples/: README.MD
examples/DepthAscii/: CMakeLists.txt  DepthAscii.cpp
examples/DepthMeasure/: CMakeLists.txt  DepthMeasure.cpp
examples/ExtractRawData/: CMakeLists.txt  ExtractRawData.cpp  Readme.md
examples/ParseVXL/: CMakeLists.txt  ParseVXL.cpp  README.MD
examples/SimplePointCloudViewer/: CMakeLists.txt  PCLGrabber.cpp  PCLGrabber.h  PCLViewer.cpp  PCLViewer.h  SimplePointCloudViewer.cpp
libs/macos/include/pointcloud-1.0.0/: Configuration.h  DataPacket.h  DepthCamera.h  FrameStream.h  Parameter.h  PointCloudConfig.h  PointCloudExports.h  SerializedObject.h  Streamer.h
libs/macos/include/pointcloud-1.0.0/3dtof/: 3DToFExports.h
libs/macos/include/pointcloud-1.0.0/Filter/: DenoiseFilter.h  DiscreteGaussian.h  FilterFactory.h
libs/macos/lib/: libpointcloud.dylib  libusb-1.0.0.dylib  log.txt
libs/macos/lib/cmake/PointCloud/: PointCloudConfig.cmake  PointCloudTargets.cmake
libs/macos/lib/plugin/: libSonycdk.dylib  libcalculuscdk.0.6.7.dylib  libcalculuscdk.34.dylib  libcalculuscdk.dylib  libtintincdk.0.6.7.dylib  libtintincdk.34.dylib  libtintincdk.dylib
libs/macos/lib/python3/: PointCloud.py
libs/macos/share/pointcloud-1.0.0/conf/: SonyCDKCamera.conf  SonyCDKCameraNormal.conf  SonyCDKCameraNormal_No1.conf
libs/rasp4/include/pointcloud-1.0.0/: Common.h  Configuration.h  DepthCamera.h  Frame.h  HardwareSerializer.h  Logger.h  Parameter.h  Point.h  PointCloudConfig.h  PointCloudExports.h  Streamer.h  Timer.h  USBIO.h
libs/rasp4/include/pointcloud-1.0.0/Filter/: BilateralFilter.h  FilterSet.h  HDRFilter.h  SmoothFilter.h
libs/rasp4/share/pointcloud-1.0.0/conf/: SonyCDKCameraStandard.conf
libs/ubuntu/include/pointcloud-1.0.0/: CameraSystem.h  Configuration.h  Convolve2D.h  DFT.h  Data2DCodec.h  DataPacket.h  DepthCamera.h  DepthCameraFactory.h  DepthCameraLibrary.h  Device.h  Downloader.h  DownloaderFactory.h  Frame.h  FrameStream.h  HardwareSerializer.h  Logger.h  Parameter.h  ParameterDMLParser.h  PointCloudConfig.h  PointCloudFrameGenerator.h  PointCloudTransform.h  Ptr.h  Serializable.h  TinyXML2.h  USBIO.h  USBSystem.h  UVC.h  UVCStreamer.h  UVCXU.h  avx_mod.h  simd.h  simd16i.h  simd8i.h  uintn.h
libs/ubuntu/include/pointcloud-1.0.0/Filter/: Filter.h  FilterFactory.h  FilterSet.h  FlypixFilter.h  IIRFilter.h  NonlinearFilter.h
libs/ubuntu/include/pointcloud-1.0.0/simd/: simd4i.h  simd8f.h
libs/ubuntu/lib/cmake/PointCloud/: PointCloudConfig.cmake  PointCloudTargets-noconfig.cmake  PointCloudTargets.cmake
libs/ubuntu/lib/python2.7/: PointCloud.py
libs/ubuntu/share/pointcloud-1.0.0/conf/: SONY556IMX.dml  SonyCDKCamera.conf  SonyCDKCameraNormal.conf  SonyCDKCameraStandard.conf  SonyCDKCameraStandardShortRange.conf
libs/ubuntu/share/pointcloud-1.0.0/log/: log.txt
libs/ubuntu_arm/: README.md
libs/ubuntu_arm/include/pointcloud-1.0.0/: Frame.h  FrameBuffer.h  FrameGenerator.h  Parameter.h  PointCloudExports.h  PointCloudFrameGenerator.h  PointCloudPCLExports.h  RegisterProgrammer.h  USBBulkStreamer.h  USBIO.h  VideoMode.h
libs/ubuntu_arm/include/pointcloud-1.0.0/Filter/: DarkPixFilter.h  Filter.h  FilterParameter.h  FlyingPixFilter2.h  MedianFilter.h  TemporalMedianFilter.h
libs/ubuntu_arm/lib/python3/: PointCloud.py
libs/ubuntu_arm/share/pointcloud-1.0.0/conf/: SONY556IMX.dml  SonyCDKCameraStandard.conf
libs/windows/include/pointcloud-1.0.0/: CameraSystem.h  Common.h  Configuration.h  DataPacket.h  DepthCamera.h  DepthCameraFactory.h  Device.h  Frame.h  FrameBuffer.h  FrameGenerator.h  FrameStream.h  Logger.h  Parameter.h  ParameterDMLParser.h  Point.h  PointCloudConfig.h  PointCloudExports.h  PointCloudFrameGenerator.h  Ptr.h  RegisterProgrammer.h  SerializedObject.h  Streamer.h  Timer.h  USBBulkStreamer.h  USBIO.h  USBSystem.h  VideoMode.h  unistd.h
libs/windows/include/pointcloud-1.0.0/3dtof/: 3DToFExports.h  GeneralProgrammerBase.h  GeneralUSBProgrammer.h  ToFCrossTalkFilter.h  ToFDepthFrameGenerator.h  ToFFrameGenerator.h
libs/windows/include/pointcloud-1.0.0/Filter/: BilateralFilter.h  DarkPixFilter.h  DenoiseFilter.h  DiscreteGaussian.h  Filter.h  FilterFactory.h  FilterParameter.h  FilterSet.h  FlyingPixFilter2.h  FlypixFilter.h  HDRFilter.h  IIRFilter.h  MedianFilter.h  NonlinearFilter.h  SmoothFilter.h  TemporalMedianFilter.h
libs/windows/lib/: pointcloud.lib  tofcdk.lib
libs/windows/lib/plugin/: Sonycdk.lib
libs/windows/lib/python3/: PointCloud.py  _PointCloud.lib  _PointCloud.pyd
tools/: README.MD
wrappers/pointcloud_ros/: README.md
wrappers/pointcloud_ros/pointcloud_camera/: CMakeLists.txt  nodelet_plugins.xml  package.xml
wrappers/pointcloud_ros/pointcloud_camera/include/: base_pointcloud_node.h  constants.h  pointcloud_node_factory.h
wrappers/pointcloud_ros/pointcloud_camera/launch/: demo_pointcloud.launch  demo_rviz.launch  pointcloud_camera.launch  pointcloud_from_file.launch  view_deptheye520_model.launch
wrappers/pointcloud_ros/pointcloud_camera/launch/includes/: nodelet.launch.xml
wrappers/pointcloud_ros/pointcloud_camera/meshes/: deptheye520.stl
wrappers/pointcloud_ros/pointcloud_camera/rviz/: pointcloud.rviz
wrappers/pointcloud_ros/pointcloud_camera/src/: base_pointcloud_node.cpp  pointcloud_node_factory.cpp
wrappers/pointcloud_ros/pointcloud_camera/urdf/: deptheye520.urdf.xacro  test_deptheye520_camera.urdf.xacro
wrappers/python/exampes/: Readme.md
wrappers/python/exampes/AmplitudeImage/: ShowDepthNoGUI.py  graph.py  main_window.py  run.sh  user_process.py
wrappers/python/exampes/ExtractDepthFromVxl/: run.bat  run.sh  vxltocsv.py
wrappers/python/exampes/ExtractRawData/: ExtractRawData.py  run.bat  run.sh
wrappers/python/exampes/ShowDepthNoGUI/: ShowDepthNoGUI.py  run.bat  run.sh
(+3 files in other folders)
