<?xml version="1.0"?>
<package>
  <name>pointcloud_camera</name>
  <version>1.0.0</version>
  <description>PointCloud Camera package allowing access to PointCloud TOF cameras</description>
  <maintainer email="support@pointcloud.ai">Support</maintainer>
  <maintainer email="developer@pointcloud.ai">Developer</maintainer>
  <license>Apache 2.0</license>
  
  <url type="website">www.pointcloud.ai</url>
  <url type="bugtracker">https://github.com/pointcloud_ai/pointcloud_ros/issues</url>

  <author email="support@pointcloud.ai">Support</author>
  <author email="developer@pointcloud.ai">Developer</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>nodelet</run_depend>  
  <run_depend>genmsg</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
